--- a/wms-webservice-energy-HelioClim3v4-MC_BNI_Apr2005.ipynb
+++ b/wms-webservice-energy-HelioClim3v4-MC_BNI_Apr2005.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "The example WMTS layer is a single composite of data sampled over nine days\n",
     "in April 2012 and thirteen days in October 2012 showing the Earth at night.\n",
-    "It does not vary over time.\n",
+    "It does not vary over time..\n",
     "\n",
     "The imagery was collected by the Suomi National Polar-orbiting Partnership\n",
     "(Suomi NPP) weather satellite operated by the United States National Oceanic\n",
